<resources>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="menu_scan">Scan</string>
    <string name="start_scanning">Scan</string>
    <string name="stop_scanning">Stop</string>
    <string name="devices">Devices</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="select_device">Select Device</string>
    <string name="no_recordings">There are no recordings</string>
    <string name="no_items">No items available</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported</string>
    <string name="bluetooth_le_not_supported">Bluetooth LE is not supported</string>
    <string name="device">Device</string>
    <string name="phase_1">Way In</string>
    <string name="phase_2">Rest</string>
    <string name="phase_3">Way Out</string>
    <string name="phase_selected">Over</string>
</resources>
